--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,7 +46,8 @@
     <Analyzer Include="C:\Program Files\Unity 6000.1.9f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Script.cs" />
+    <Compile Include="Assets\Scripts\CubeCreate.cs" />
+    <Compile Include="Assets\Scripts\CubeMovement.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity 6000.1.9f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
